--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         
         <header class="bg-herbal-green p-8 text-center text-white">
             <h1 class="text-3xl md:text-4xl font-extrabold uppercase tracking-tight">Dein Weg zum Wohlbefinden</h1>
-            <p class="mt-2 text-lg opacity-90 font-light italic">Energie, Ernährung und Vitalität für jeden Tag</p>
+            <p class="mt-2 text-lg opacity-90 font-light italic text-white">Energie, Ernährung und Vitalität für jeden Tag</p>
         </header>
 
         <main class="p-6 md:p-10 space-y-10">
@@ -65,7 +65,7 @@
                     <!-- Aloe -->
                     <div class="flex flex-col items-center text-center p-4 border border-gray-100 rounded-2xl bg-gray-50">
                         <div class="h-40 flex items-center justify-center mb-4">
-                            <img src="Aloe.png" alt="Aloe Drink" class="h-full object-contain" onerror="this.src='https://via.placeholder.com/200?text=Aloe'">
+                            <img src="aloe.png" alt="Aloe Drink" class="h-full object-contain">
                         </div>
                         <h3 class="font-bold text-lg mb-2 text-herbal-green uppercase text-sm tracking-wide">1. Hydratation (Aloe)</h3>
                         <p class="text-sm leading-relaxed text-gray-600">
@@ -77,7 +77,7 @@
                     <!-- Infuso -->
                     <div class="flex flex-col items-center text-center p-4 border border-gray-100 rounded-2xl bg-gray-50">
                         <div class="h-40 flex items-center justify-center mb-4">
-                            <img src="Infuso.png" alt="Infuso" class="h-full object-contain" onerror="this.src='https://via.placeholder.com/200?text=Infuso'">
+                            <img src="Infuso.png" alt="Infuso" class="h-full object-contain">
                         </div>
                         <h3 class="font-bold text-lg mb-2 text-herbal-green uppercase text-sm tracking-wide">2. Energie (Tee-Getränk)</h3>
                         <p class="text-sm leading-relaxed text-gray-600">
@@ -85,11 +85,11 @@
                         </p>
                     </div>
 
-                    <!-- F1 + PDM -->
+                    <!-- F1 + PDM insieme -->
                     <div class="flex flex-col items-center text-center p-4 border border-gray-100 rounded-2xl bg-gray-50">
                         <div class="h-40 flex items-center justify-center mb-4 gap-2">
-                            <img src="Formula 1.png" alt="Formula 1" class="h-full object-contain" onerror="this.src='https://via.placeholder.com/100?text=F1'">
-                            <img src="pdm.png" alt="PDM" class="h-full object-contain" onerror="this.src='https://via.placeholder.com/100?text=PDM'">
+                            <img src="formula-1.png" alt="Formula 1" class="h-full object-contain">
+                            <img src="pdm.png" alt="PDM" class="h-full object-contain">
                         </div>
                         <h3 class="font-bold text-lg mb-2 text-herbal-green uppercase text-sm tracking-wide">3. Ernährung (F1 + PDM)</h3>
                         <p class="text-sm leading-relaxed text-gray-600">
@@ -128,7 +128,7 @@
                     <div>
                         <p class="text-gray-700 mb-4 font-semibold text-sm">Proteine und Hydratation: Wichtig, um den Hunger bis zum Abendessen zu kontrollieren.</p>
                         <div class="flex justify-center md:justify-start">
-                            <img src="Barretta.png" alt="Protein Riegel" class="w-48 h-48 object-contain rounded-2xl bg-white p-2 shadow-sm" onerror="this.src='https://via.placeholder.com/200?text=Barretta'">
+                            <img src="barretta.png" alt="Protein Riegel" class="w-48 h-48 object-contain rounded-2xl bg-white p-2 shadow-sm">
                         </div>
                     </div>
                     <div>
