--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     <div class="max-w-4xl mx-auto mb-6 flex flex-wrap justify-between items-center gap-4 no-print">
         <h2 class="text-sm font-bold uppercase tracking-widest text-gray-500">Wellness Dashboard</h2>
         <div class="flex gap-3">
-            <!-- Pulsante WhatsApp Superiore -->
-            <a href="https://wa.me/393792118565" target="_blank" class="action-btn flex items-center gap-2 bg-green-500 text-white px-5 py-2.5 rounded-full font-semibold shadow-md hover:bg-green-600">
+            <!-- Pulsante WhatsApp Superiore con Messaggio -->
+            <a href="https://wa.me/393792118565?text=Hallo%20Andrea" target="_blank" class="action-btn flex items-center gap-2 bg-green-500 text-white px-5 py-2.5 rounded-full font-semibold shadow-md hover:bg-green-600">
                 <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 1 1-7.6-11.7 8.38 8.38 0 0 1 3.8.9L21 3z"></path></svg>
                 WhatsApp
             </a>
@@ -173,7 +173,8 @@
             <p class="text-xl font-bold mb-2 text-white">Spüre sofort den Unterschied!</p>
             <div class="flex items-center justify-center gap-2 mb-4 text-herbal-green font-semibold">
                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 1 1-7.6-11.7 8.38 8.38 0 0 1 3.8.9L21 3z"></path></svg>
-                <span>WhatsApp: +39 379 211 8565</span>
+                <!-- Messaggio WhatsApp nel Footer -->
+                <a href="https://wa.me/393792118565?text=Hallo%20Andrea" target="_blank" class="hover:underline">WhatsApp: +39 379 211 8565</a>
             </div>
             <p class="text-[10px] opacity-40 uppercase tracking-widest text-white">© Wellness Hub - Dein persönlicher Guide ✨</p>
         </footer>
