--- a/index.html
+++ b/index.html
@@ -28,17 +28,14 @@
 </head>
 <body class="bg-gray-100 text-gray-800 antialiased p-4 md:p-8">
 
-    <!-- Barra delle Azioni Superiore -->
-    <div class="max-w-4xl mx-auto mb-6 flex flex-wrap justify-between items-center gap-4 no-print">
+    <div class="max-w-4xl mx-auto mb-6 flex justify-between items-center no-print text-gray-500">
         <h2 class="text-sm font-bold uppercase tracking-widest text-gray-500">Wellness Dashboard</h2>
         <div class="flex gap-3">
-            <!-- Pulsante WhatsApp Superiore con Messaggio -->
-            <a href="https://wa.me/393792118565?text=Hallo%20Andrea" target="_blank" class="action-btn flex items-center gap-2 bg-green-500 text-white px-5 py-2.5 rounded-full font-semibold shadow-md hover:bg-green-600">
-                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 1 1-7.6-11.7 8.38 8.38 0 0 1 3.8.9L21 3z"></path></svg>
-                WhatsApp
+            <a href="https://wa.me/393792118565?text=Hallo%20Andrea" target="_blank" class="action-btn flex items-center gap-2 bg-green-500 text-white px-6 py-2.5 rounded-full font-semibold shadow-md">
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" viewBox="0 0 24 24"><path d="M.057 24l1.687-6.163c-1.041-1.804-1.588-3.849-1.587-5.946.003-6.556 5.338-11.891 11.893-11.891 3.181.001 6.167 1.24 8.413 3.488 2.246 2.248 3.484 5.232 3.483 8.413-.003 6.557-5.338 11.892-11.893 11.892-1.997-.001-3.951-.5-5.688-1.448l-6.308 1.654zm6.757-4.791c1.513.899 3.111 1.373 4.76 1.373 5.33 0 9.67-4.34 9.67-9.671 0-2.585-1.006-5.016-2.834-6.844-1.828-1.828-4.258-2.834-6.843-2.834-5.333 0-9.673 4.34-9.673 9.672 0 1.761.479 3.483 1.385 5.003l-1.026 3.744 3.831-.997zm11.233-7.14c-.08-.133-.293-.213-.613-.373s-1.893-.933-2.186-1.04c-.293-.106-.506-.16-.72.16s-.826 1.04-1.013 1.253-.373.24-.693.08-1.352-.498-2.577-1.59c-.952-.849-1.594-1.9-1.781-2.213-.187-.313-.02-.483.14-.641.144-.142.32-.373.48-.56s.213-.32.32-.533c.106-.213.053-.4-.027-.56s-.72-1.733-.986-2.373c-.26-.627-.523-.541-.72-.551-.186-.009-.4-.01-.613-.01s-.56.08-.853.4c-.293.32-1.12 1.093-1.12 2.667s1.147 3.093 1.307 3.306c.16.213 2.257 3.447 5.467 4.833.763.33 1.359.526 1.823.673.766.243 1.463.209 2.013.127.613-.092 1.893-.773 2.16-1.52.267-.747.267-1.387.187-1.52z"/></svg>
+                Kontakt Andrea
             </a>
-            <!-- Pulsante Stampa -->
-            <button onclick="window.print()" class="action-btn flex items-center gap-2 bg-white text-gray-700 px-5 py-2.5 rounded-full font-semibold shadow-md border border-gray-200">
+            <button onclick="window.print()" class="action-btn flex items-center gap-2 bg-white text-gray-700 px-6 py-2.5 rounded-full font-semibold shadow-md border border-gray-200">
                 <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M6 9V2h12v7"></path><path d="M6 18H4a2 2 0 0 1-2-2v-5a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2v5a2 2 0 0 1-2 2h-2"></path><rect x="6" y="14" width="12" height="8"></rect></svg>
                 Drucken
             </button>
@@ -64,7 +61,7 @@
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
                     <!-- Aloe -->
                     <div class="flex flex-col items-center text-center p-4 border border-gray-100 rounded-2xl bg-gray-50">
-                        <div class="h-40 flex items-center justify-center mb-4">
+                        <div class="h-48 flex items-center justify-center mb-4">
                             <img src="aloe.png" alt="Aloe Drink" class="h-full object-contain">
                         </div>
                         <h3 class="font-bold text-lg mb-2 text-herbal-green uppercase text-sm tracking-wide">1. Hydratation (Aloe)</h3>
@@ -76,24 +73,50 @@
 
                     <!-- Infuso -->
                     <div class="flex flex-col items-center text-center p-4 border border-gray-100 rounded-2xl bg-gray-50">
-                        <div class="h-40 flex items-center justify-center mb-4">
+                        <div class="h-48 flex items-center justify-center mb-4">
                             <img src="Infuso.png" alt="Infuso" class="h-full object-contain">
                         </div>
                         <h3 class="font-bold text-lg mb-2 text-herbal-green uppercase text-sm tracking-wide">2. Energie (Tee-Getränk)</h3>
                         <p class="text-sm leading-relaxed text-gray-600">
-                            <strong>½ TEELÖFFEL</strong> in eine Tasse heißes Wasser oder in 1,5 Liter Wasser über den Tag verteilt.
+                            <strong>½ TEELÖFFEL</strong> in eine Tasse heißes Wasser oder in eine 1,5-Liter-Flasche.
                         </p>
                     </div>
 
-                    <!-- F1 + PDM insieme -->
+                    <!-- F1 + PDM (Aktualisierte Dosis) -->
                     <div class="flex flex-col items-center text-center p-4 border border-gray-100 rounded-2xl bg-gray-50">
-                        <div class="h-40 flex items-center justify-center mb-4 gap-2">
-                            <img src="formula-1.png" alt="Formula 1" class="h-full object-contain">
+                        <div class="h-48 flex items-center justify-center mb-4 gap-2">
+                            <img src="Formula 1.png" alt="Formula 1" class="h-full object-contain">
                             <img src="pdm.png" alt="PDM" class="h-full object-contain">
                         </div>
                         <h3 class="font-bold text-lg mb-2 text-herbal-green uppercase text-sm tracking-wide">3. Ernährung (F1 + PDM)</h3>
                         <p class="text-sm leading-relaxed text-gray-600">
-                            <strong>2 Löffel F1 + 1 Löffel PDM</strong> in 250ml Wasser oder Pflanzenmilch.
+                            <strong>2 Löffel F1 + 2 Löffel PDM</strong><br>
+                            in 250ml Wasser oder Pflanzenmilch.
+                        </p>
+                    </div>
+                </div>
+
+                <!-- Zusätzliche Zubereitungsinformationen -->
+                <div class="mt-8 grid grid-cols-1 md:grid-cols-2 gap-6 p-6 bg-gray-50 border border-gray-100 rounded-3xl">
+                    <div>
+                        <h4 class="font-bold text-gray-800 mb-2 uppercase text-xs tracking-widest">Wähle deine Flüssigkeit:</h4>
+                        <ul class="text-sm text-gray-600 space-y-1">
+                            <li>• Wasser oder Soja- / Hafer- / Reisdrink</li>
+                            <li>• Fruchtsaft <span class="text-red-500 font-bold uppercase">ohne Zuckerzusatz</span></li>
+                            <li>• Magerjoghurt</li>
+                        </ul>
+                        <p class="mt-3 text-xs italic text-gray-500">
+                            "Die Flüssigkeitsmenge kann beliebig angepasst werden, je nachdem, ob man eine dickflüssigere oder dünnere Mahlzeit wünscht."
+                        </p>
+                    </div>
+                    <div class="bg-white p-4 rounded-2xl border border-gray-200">
+                        <p class="text-xs leading-relaxed text-gray-600">
+                            <strong class="text-orange-600">⚠️ VORSICHT BEI KUHMILCH:</strong><br>
+                            Ein halber Liter Milch pro Tag (250cc pro Portion) könnte bei Personen, die nicht daran gewöhnt sind, Darmprobleme oder Verdauungsschwierigkeiten verursachen.
+                        </p>
+                        <p class="mt-2 text-xs leading-relaxed text-gray-600">
+                            <strong class="text-blue-600">🌡️ TEMPERATUR:</strong><br>
+                            Flüssigkeiten können kalt oder lauwarm sein, aber <strong class="uppercase">nicht heiß</strong> (hohe Temperaturen zerstören Nährstoffe).
                         </p>
                     </div>
                 </div>
@@ -102,42 +125,42 @@
             <!-- Abschnitt Ziele -->
             <section class="grid grid-cols-1 md:grid-cols-2 gap-6">
                 <div class="p-6 bg-blue-50 rounded-2xl border border-blue-100">
-                    <h3 class="text-blue-700 font-bold text-xl mb-3 flex items-center gap-2">⚖️ Gewichtskontrolle</h3>
+                    <h3 class="text-blue-700 font-bold text-xl mb-3 flex items-center gap-2">⚖️ Zur Gewichtsabnahme</h3>
                     <p class="text-sm text-gray-700 leading-relaxed">
-                        Ersetze <strong>2 Mahlzeiten pro Tag</strong>:<br>
-                        • FRÜHSTÜCK + eine HAUPTMAHLZEIT (Mittag- oder Abendessen).
+                        Ersetze <strong>2 Mahlzeiten pro Tag</strong> durch einen Shake:<br>
+                        • Das <strong>FRÜHSTÜCK</strong><br>
+                        • Eine <strong>HAUPTMAHLZEIT</strong> (Mittag- oder Abendessen)
                     </p>
                 </div>
                 <div class="p-6 bg-orange-50 rounded-2xl border border-orange-100">
-                    <h3 class="text-orange-700 font-bold text-xl mb-3 flex items-center gap-2">💪 Muskelmasse</h3>
+                    <h3 class="text-orange-700 font-bold text-xl mb-3 flex items-center gap-2">💪 Zum Muskelaufbau</h3>
                     <p class="text-sm text-gray-700 leading-relaxed">
-                        Verzehre <strong>3 Shakes pro Tag</strong>:<br>
-                        • FRÜHSTÜCK + ca. 1 Stunde nach MITTAG- und ABENDESSEN.
+                        Verzehre <strong>3 Portionen pro Tag</strong>:<br>
+                        • Das <strong>FRÜHSTÜCK</strong> + 2 zusätzliche Shakes (1 Stunde nach den Hauptmahlzeiten).
                     </p>
                 </div>
             </section>
 
             <!-- Abschnitt Snacks -->
-            <section class="bg-gray-50 p-8 rounded-3xl border border-gray-200">
+            <section class="bg-gray-50 p-8 rounded-3xl border border-gray-200 shadow-sm">
                 <div class="flex items-center gap-3 mb-6">
                     <div class="bg-herbal-green text-white w-10 h-10 rounded-full flex items-center justify-center font-bold text-xl">2</div>
                     <h2 class="text-2xl font-bold text-gray-800 uppercase tracking-wide">Snacks und Nachmittag</h2>
                 </div>
                 
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-8 items-center">
-                    <div>
-                        <p class="text-gray-700 mb-4 font-semibold text-sm">Proteine und Hydratation: Wichtig, um den Hunger bis zum Abendessen zu kontrollieren.</p>
-                        <div class="flex justify-center md:justify-start">
-                            <img src="barretta.png" alt="Protein Riegel" class="w-48 h-48 object-contain rounded-2xl bg-white p-2 shadow-sm">
-                        </div>
+                    <div class="flex flex-col items-center">
+                        <img src="barretta.png" alt="Protein Riegel" class="w-56 h-56 object-contain mix-blend-multiply">
                     </div>
                     <div>
+                        <p class="text-gray-700 mb-4 font-semibold text-sm italic">Proteine und Hydratation: Wichtig, um nicht hungrig zum Abendessen zu kommen.</p>
                         <h4 class="font-bold text-herbal-green mb-3 uppercase text-xs tracking-widest">Gesunde Snack-Optionen:</h4>
-                        <ul class="space-y-2 text-sm text-gray-600">
+                        <ul class="space-y-1 text-sm text-gray-600">
                             <li>✔️ Herbalife Protein-Riegel</li>
-                            <li>✔️ 1 Stück Obst + 5-6 Mandeln</li>
-                            <li>✔️ Magerer griechischer Joghurt</li>
-                            <li>✔️ Hummus mit Rohkost</li>
+                            <li>✔️ Grana Padano oder Vollkorn-Cracker</li>
+                            <li>✔️ Frisches Obst oder Nüsse (Mandeln)</li>
+                            <li>✔️ Magerer griechischer Joghurt oder Sojajoghurt</li>
+                            <li>✔️ Geröstete Sojabohnen</li>
                         </ul>
                     </div>
                 </div>
@@ -145,40 +168,40 @@
 
             <!-- Goldene Regeln -->
             <section class="grid grid-cols-2 md:grid-cols-4 gap-4 text-center">
-                <div class="p-4 bg-white rounded-2xl border border-gray-200">
+                <div class="p-4 bg-white rounded-2xl border border-gray-200 shadow-sm">
                     <div class="text-2xl mb-1">💧</div>
                     <p class="text-[10px] font-bold uppercase text-gray-400">Hydratation</p>
                     <p class="text-xs font-semibold">2L Wasser am Tag</p>
                 </div>
-                <div class="p-4 bg-white rounded-2xl border border-gray-200">
+                <div class="p-4 bg-white rounded-2xl border border-gray-200 shadow-sm">
                     <div class="text-2xl mb-1">🏃</div>
                     <p class="text-[10px] font-bold uppercase text-gray-400">Aktivität</p>
-                    <p class="text-xs font-semibold">30 Min. Bewegung</p>
+                    <p class="text-xs font-semibold">Regelmäßiger Sport</p>
                 </div>
-                <div class="p-4 bg-white rounded-2xl border border-gray-200">
+                <div class="p-4 bg-white rounded-2xl border border-gray-200 shadow-sm">
                     <div class="text-2xl mb-1">🥗</div>
-                    <p class="text-[10px] font-bold uppercase text-gray-400">Ernährung</p>
-                    <p class="text-xs font-semibold">Ausgewogene Kost</p>
+                    <p class="text-[10px] font-bold uppercase text-gray-400">Qualität</p>
+                    <p class="text-xs font-semibold">Ausgewogene Mahlzeit</p>
                 </div>
-                <div class="p-4 bg-white rounded-2xl border border-gray-200">
+                <div class="p-4 bg-white rounded-2xl border border-gray-200 shadow-sm">
                     <div class="text-2xl mb-1">✨</div>
-                    <p class="text-[10px] font-bold uppercase text-gray-400">Erfolg</p>
-                    <p class="text-xs font-semibold">Tägliche Disziplin</p>
+                    <p class="text-[10px] font-bold uppercase text-gray-400">Veränderung</p>
+                    <p class="text-xs font-semibold">Kleine Gewohnheiten</p>
                 </div>
             </section>
 
         </main>
 
         <footer class="bg-gray-900 p-8 text-center text-white">
-            <p class="text-xl font-bold mb-2 text-white">Spüre sofort den Unterschied!</p>
-            <div class="flex items-center justify-center gap-2 mb-4 text-herbal-green font-semibold">
-                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 1 1-7.6-11.7 8.38 8.38 0 0 1 3.8.9L21 3z"></path></svg>
-                <!-- Messaggio WhatsApp nel Footer -->
-                <a href="https://wa.me/393792118565?text=Hallo%20Andrea" target="_blank" class="hover:underline">WhatsApp: +39 379 211 8565</a>
+            <p class="text-xl font-bold mb-2 uppercase tracking-wide italic text-white">Beginne noch heute: Du wirst den Unterschied sofort spüren!</p>
+            <div class="flex items-center justify-center gap-2 mb-4 text-herbal-green font-semibold no-print">
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" viewBox="0 0 24 24"><path d="M.057 24l1.687-6.163c-1.041-1.804-1.588-3.849-1.587-5.946.003-6.556 5.338-11.891 11.893-11.891 3.181.001 6.167 1.24 8.413 3.488 2.246 2.248 3.484 5.232 3.483 8.413-.003 6.557-5.338 11.892-11.893 11.892-1.997-.001-3.951-.5-5.688-1.448l-6.308 1.654zm6.757-4.791c1.513.899 3.111 1.373 4.76 1.373 5.33 0 9.67-4.34 9.67-9.671 0-2.585-1.006-5.016-2.834-6.844-1.828-1.828-4.258-2.834-6.843-2.834-5.333 0-9.673 4.34-9.673 9.672 0 1.761.479 3.483 1.385 5.003l-1.026 3.744 3.831-.997zm11.233-7.14c-.08-.133-.293-.213-.613-.373s-1.893-.933-2.186-1.04c-.293-.106-.506-.16-.72.16s-.826 1.04-1.013 1.253-.373.24-.693.08-1.352-.498-2.577-1.59c-.952-.849-1.594-1.9-1.781-2.213-.187-.313-.02-.483.14-.641.144-.142.32-.373.48-.56s.213-.32.32-.533c.106-.213.053-.4-.027-.56s-.72-1.733-.986-2.373c-.26-.627-.523-.541-.72-.551-.186-.009-.4-.01-.613-.01s-.56.08-.853.4c-.293.32-1.12 1.093-1.12 2.667s1.147 3.093 1.307 3.306c.16.213 2.257 3.447 5.467 4.833.763.33 1.359.526 1.823.673.766.243 1.463.209 2.013.127.613-.092 1.893-.773 2.16-1.52.267-.747.267-1.387.187-1.52z"/></svg>
+                <a href="https://wa.me/393792118565?text=Hallo%20Andrea" target="_blank" class="hover:underline text-white font-semibold">WhatsApp: +39 379 211 8565</a>
             </div>
-            <p class="text-[10px] opacity-40 uppercase tracking-widest text-white">© Wellness Hub - Dein persönlicher Guide ✨</p>
+            <p class="text-[10px] opacity-40 uppercase tracking-widest text-white">© hlfnutristore - Dein Ergebnis ist mein Ziel ✨</p>
         </footer>
 
     </div>
+
 </body>
 </html>
